@startuml

class BankAccount {
    - accountNumber: int
    - balance: double
    + BankAccount(initialBalance: double)
    + deposit(amount: double): void
    + withdraw(amount: double): void
    + getBalance(): double
    + getAccountNumber(): int
}

class CheckingAccount {
    + CheckingAccount(initialBalance: double)
}

class SavingsAccount {
    + SavingsAccount(initialBalance: double)
}

BankAccount <-- CheckingAccount : extends
BankAccount <-- SavingsAccount : extends

@enduml